apps/portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: portfolio
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio
        image: harbor.192.168.0.240.nip.io/portfolio/site:sha-67e921f5
        ports:
        - name: http
          containerPort: 80
        resources:
          requests: {cpu: 10m, memory: 32Mi}
          limits: {cpu: 200m, memory: 128Mi}
        readinessProbe:
          httpGet: {path: /, port: http}
          initialDelaySeconds: 2
          periodSeconds: 5
        livenessProbe:
          httpGet: {path: /, port: http}
          initialDelaySeconds: 10
          periodSeconds: 15
